# tdsh

./: Cargo.toml
src/: auth_main.rs  main.rs
src/assets/cert/: key.pem
src/auth/: main.rs  parser.rs
src/auth/cert/: cert.pem
src/auth/site/: index.html
src/util/: mod.rs  url_parser.rs
