[package]
name = "ameritrade"
version = "0.1.0"
authors = ["Josh Rahm <joshuarahm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "tdsh"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
tiny_http = { features = ["ssl"], version = "0.6.2" }
base64 = "0.11.0"
percent-encoding = "2.1.0"
directories = "2.0.2"
clap = "2.33.0"

[patch.crates-io]
# Waiting for release that fixes the hanging SSL bug.
tiny_http = { git = "https://github.com/tiny-http/tiny-http", rev = "HEAD" }
